...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="$ 0.00" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6rC-cy-Js8">
                                <rect key="frame" x="87.666666666666686" y="10" width="200" height="70"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                    <constraint firstAttribute="height" constant="50" id="bgk-PP-PzR"/>
                                </constraints>
                                <state key="normal" title="Add">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <rect key="frame" x="25" y="90" width="325" height="120"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Note" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nGq-lA-RAs">
                                        <rect key="frame" x="0.0" y="0.0" width="325" height="55"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        </variation>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Choose expense type..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="54J-eC-4xN">
                                        <rect key="frame" x="0.0" y="65" width="325" height="55"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                            <constraint firstAttribute="height" constant="25" id="qib-Do-nAf"/>
                                        </constraints>
                                        <state key="normal" image="pencil"/>
                                        <variation key="default">
                                            <mask key="constraints">
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxE-yJ-qAH">
                                        <rect key="frame" x="0.0" y="72" width="160" height="24"/>
                                        <accessibility key="accessibilityConfiguration" identifier="monthlyBudget"/>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                        <nil key="textColor"/>
...
                        </variation>
                    </view>
                    <tabBarItem key="tabBarItem" title="Profile" image="user" id="taT-VK-dxl"/>
                    <connections>
                        <outlet property="monthBudget" destination="dxE-yJ-qAH" id="H0s-DV-KQd"/>
...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Statistics" id="VTU-Zb-NLw"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
...
                                </constraints>
                                <segments>
                                    <segment title="All"/>
                                    <segment title="Foods"/>
                                    <segment title="Shopping"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Today's Expenses" id="yH6-gi-3qZ">
                        <barButtonItem key="backBarButtonItem" title="Home" id="07w-dB-rfd"/>
                    </navigationItem>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact Us" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d5R-f6-jmf">
                                                    <rect key="frame" x="16" y="11" width="86" height="38"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Help" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lmN-qg-cNh">
                                                    <rect key="frame" x="16" y="11" width="36" height="38"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                </cells>
                            </tableViewSection>
                            <tableViewSection headerTitle="About" id="gaL-OF-XiW">
                                <cells>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="60" id="9B0-1K-KlF">
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Developers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZaT-zk-NjG">
                                                    <rect key="frame" x="16" y="11" width="87" height="38"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
